force-app/main/default/objects/PT_almacenes__c/PT_almacenes__c.object-meta.xml
<CustomObject>
    <label>Almacen</label>
    <nameField>
        <label>Almacen Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Almacenes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>