force-app/main/default/objects/PT_almacenes__c/fields/PT_almacenDestino__c.field-meta.xml
<CustomField>
    <fullName>PT_almacenDestino__c</fullName>
    <label>Almacen Destino</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BCN</fullName>
                <label>Barcelona</label>
            </value>
            <value>
                <fullName>MAD</fullName>
                <label>Madrid</label>
            </value>
            <value>
                <fullName>SEV</fullName>
                <label>Sevilla</label>
            </value>
            <value>
                <fullName>VLN</fullName>
                <label>Valencia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>