force-app/main/default/objects/PT_almacenes__c/fields/PT_cantidad__c.field-meta.xml
<CustomField>
    <fullName>PT_cantidad__c</fullName>
    <label>Cantidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>