force-app/main/default/objects/PT_almacenes__c/fields/PT_codProducto__c.field-meta.xml
<CustomField>
    <fullName>PT_codProducto__c</fullName>
    <label>Código Producto</label>
    <length>20</length>
    <type>Text</type>
</CustomField>