force-app/main/default/objects/PT_almacenes__c/fields/PT_fechaEnvio__c.field-meta.xml
<CustomField>
    <fullName>PT_fechaEnvio__c</fullName>
    <label>Fecha Envío</label>
    <type>Date</type>
</CustomField>