force-app/main/default/objects/PT_almacenes__c/fields/PT_producto__c.field-meta.xml
<CustomField>
    <fullName>PT_producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Almacenes</relationshipLabel>
    <relationshipName>Almacenes</relationshipName>
    <type>Lookup</type>
</CustomField>